# twentyfour-club

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AchievementToast.tsx  AchievementsPanel.tsx  BubbleBoard.tsx  Card.tsx  Cards.tsx  ClickBuilder.tsx  CollapsedView.tsx  ExpandedView.tsx  ExpressionInput.tsx  FeedbackToast.tsx  GlassPanel.tsx  HintPanel.tsx  HistoryPanel.tsx  ModeToggle.tsx  OnboardingBubble.tsx  ReduceBoard.tsx  Scoreboard.tsx  SettingsPanel.tsx  SolutionsPanel.tsx  StripBoard.tsx  TimerBar.tsx  TitleBar.tsx
src/features/achievements/: achievements.ts  definitions.ts
src/features/game/: expression.ts  hints.ts  reduce.test.ts  reduce.ts  validation.test.ts  validation.ts
src/features/generator/: difficulty.ts  generator.ts
src/features/share/: seedCode.test.ts  seedCode.ts
src/features/solver/: solver.test.ts  solver.ts
src/hooks/: useKeyboardShortcuts.ts  useRushTimer.ts  useTrayBridge.ts  useWindowPlacement.ts
src/lib/: constants.ts  format.ts  random.ts
src/store/: gameStore.ts  uiStore.ts
src/types/: index.ts
