[package]
name = "twentyfour-club"
version = "0.1.0"
description = "24club — floating desktop puzzle"
authors = ["24club"]
edition = "2021"

[lib]
name = "twentyfour_club_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
